--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>Angular 2.0 • Batarangle • Example App</title>
   </head>
   <body>
-    <todo-list data-ngid="root"></todo-list>
+    <my-app></my-app>
     <footer class="info">
       <p>Double-click to edit a todo</p>
     </footer>
