--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Angular 2 App | ng2-webpack</title>
+    <title>Angular 2 Webpack Sample</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
-    <base href="/">
+    <base href="/dist/">
   </head>
   <body>
     <my-app>Loading...</my-app>
